--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <p class="green-p">Тут будет зеленый вместо красного. Использую class</p>
             </div>
             <div class="red-box">
-                <p class="italic-text">Первый</p>
-                <p class="italic-text">Второй</p>
+                <p class="italic-text">First</p>
+                <p class="italic-text">Second</p>
                 <p class="text-pointer italic-text">Третий</p>
             </div>
         </main>
